--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <!-- <link rel="stylesheet" href="path/to/your/application.css">
-  <link rel="stylesheet" href="path/to/vue-datepicker.css">
-   -->
+  <link rel="stylesheet" href="path/to/vue-datepicker.css"> -->
+  <!-- <style src="@chenfengyuan/vue-datepicker/dist/vue-datepicker.css"></style> -->
+
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
